--- a/src/index.css
+++ b/src/index.css
@@ -23,8 +23,47 @@ h1, h2, h3, h4, h5 {
     outline: none;
     font-family: inherit;
     border-radius: 7px;
+    color: inherit;
+    text-decoration: none;
+}
+
+.btn_wider {
+    padding: 10px 25px;
 }
 
 .btn_primary {
     background-color: #1E1E1E;
+}
+.btn_black {
+    background-color: black;
+}
+.btn_accent {
+    background-color: #343434;
+}
+.btn_rounded {
+    border-radius: 50px;
+}
+
+
+.label {
+    text-transform: uppercase;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+.heading {
+    margin: 0;
+    font-size: 46px;
+    text-align: center;
+}
+
+.paragraph {
+    font-size: 20px;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
 }
