--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,10 @@ h1, h2, h3, h4, h5 {
     text-align: center;
 }
 
+.heading_small {
+    font-size: 32px;
+}
+
 .paragraph {
     font-size: 20px;
 }
@@ -66,4 +70,12 @@ h1, h2, h3, h4, h5 {
     flex-direction: row;
     justify-content: center;
     gap: 20px;
+}
+
+section {
+    padding: 60px 0;
+}
+
+.centered {
+    text-align: center;
 }
