--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,11 +1,13 @@
 /* Navbar.css */
 
+.navigation {
+  background-color: #000;
+}
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    background-color: #000;
     color: #fff;
   }
   
