--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ h1, h2, h3, h4, h5 {
     border-radius: 7px;
     color: inherit;
     text-decoration: none;
+    border: none !important;
 }
 
 .btn_wider {
@@ -78,4 +79,41 @@ section {
 
 .centered {
     text-align: center;
+}
+
+input {
+    display: block;
+    width: 100%;
+    height: 50px;
+    background-color: #343434;
+    color: inherit;
+    font-family: inherit;
+    outline: none;
+    border: none;
+    border-radius: 10px;
+    margin-top: 20px;
+    padding: 0 10px;
+    
+}
+
+textarea {
+    display: block;
+    width: 100%;
+    height: 150px;
+    background-color: #343434;
+    color: inherit;
+    font-family: inherit;
+    outline: none;
+    border: none;
+    border-radius: 10px;
+    margin-top: 20px;
+    padding: 0 10px;
+}
+form {
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 60px;
+}
+form button {
+    margin-top: 20px;
 }
