--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
     background-color: #191919;
     color: #fff;
     font-family: 'Open Sans', sans-serif;
+    overflow-x: hidden !important;
 }
 
 h1, h2, h3, h4, h5 {
@@ -116,4 +117,9 @@ form {
 }
 form button {
     margin-top: 20px;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
 }
