--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -60,3 +60,28 @@
 .contents {
     padding-left: 10px;
 }
+
+@media screen and (max-width: 1180px) {
+    .tech_stack {
+        grid-template-columns: 3fr 3fr 3fr 3fr;
+    }
+    
+}
+
+@media screen and (max-width: 850px) {
+    .tech_stack {
+        grid-template-columns: 4fr 4fr 4fr;
+    }
+}
+
+@media screen and (max-width: 660px) {
+    .tech_stack {
+        grid-template-columns: 6fr 6fr;
+    }
+}
+
+@media screen and (max-width: 460px) {
+    .tech_stack {
+        grid-template-columns: 12fr;
+    }
+}
