--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,8 @@ h1, h2, h3, h4, h5 {
     max-width: 1204px;
     margin-left: auto;
     margin-right: auto;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 .btn {
