Styled the projects grid for all displays

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -77,6 +77,12 @@
     .heading {
         font-size: 36px;
     }
+    .projects_container {
+        grid-template-columns: 12fr;
+    }
+    .project img {
+        width: 100%;
+    }
 }
 
 @media screen and (max-width: 660px) {
