Made minor changes

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -67,6 +67,13 @@
 .two {
     background-color: #FF0000;
 }
+.three {
+    background-color: lawngreen;
+}
+
+.four {
+    background-color: orangered;
+}
 .contents {
     padding-left: 10px;
 }
