Created the portfolio page, added logic and styled it for desktops

--- a/src/index.css
+++ b/src/index.css
@@ -102,7 +102,9 @@ section {
 .centered {
     text-align: center;
 }
-
+.start {
+    text-align: start;
+}
 input {
     display: block;
     width: 100%;
