--- a/src/css/Project.css
+++ b/src/css/Project.css
@@ -19,3 +19,20 @@
 .mg_top_2 {
     margin-top: 40px;
 }
+.coverimage_projects img {
+    width: 100%;
+    height: fit-content;
+    object-fit: cover;
+}
+@media screen and (max-width: 850px) {
+    .project_details_grid {
+        grid-template-columns: 100%;
+        gap: 0;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .left_information .info_block {
+        margin-bottom: 30px;
+    }
+}
