Made some minor changes

--- a/src/css/Project.css
+++ b/src/css/Project.css
@@ -24,6 +24,9 @@
     height: fit-content;
     object-fit: cover;
 }
+.under:hover {
+    text-decoration: underline;
+}
 @media screen and (max-width: 850px) {
     .project_details_grid {
         grid-template-columns: 100%;
