Fixed project grid image and card size for all screen sizes

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -41,18 +41,18 @@
     text-align: start;
     display: grid;
     grid-template-columns: 6fr 6fr;
+    grid-auto-rows: 1fr;
     gap: 20px;
 }
 .project img {
     max-width: 100% !important;
-    max-height: 380px;
-    object-fit: cover;
-    min-height: 357px;
+    height: fit-content;
 }
 .project {
     max-width: 100% !important;
     transition: 200ms;
     padding-bottom:5px ;
+    height: 100%;
 }
 
 .project:hover {
